@@ -1,5 +1,3 @@
-/Test1/
-/tiles/
 /items/
-/levels/
 /genTest/
+/levels/
